# grad

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  main.cxx
cmake/: CppStr.cmake  IncludeShaders.cmake
math/: mat3f.h  mat4f.h  matrix_math.h  quaternion.h  restrict.h  vec3f.h  vec4f.h  vector_math.h
misc/: colormap.cxx  colormap.h
opengl/: gl_model.cxx  gl_model.h  mesh.cxx  mesh.h  opengl_common.cxx  opengl_common.h  sample_models.h  shader_program.cxx  shader_program.h
shaders/: gradient.frag  gradient.vert
